--- a/Cafeteria/Views/Fluxo_Venda/Index.cshtml
+++ b/Cafeteria/Views/Fluxo_Venda/Index.cshtml
@@ -127,7 +127,7 @@
     </div>
 </div>
 
-
+<!--Modal da forma de pagamento-->
 <div class="modal fade" tabindex="-1" role="dialog" id="myModal3" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -151,9 +151,7 @@
                         </select>
                     </div>
                 </div>
-                <br />
             </div>
-            <br />
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                 <button type="button" class="btn btn-primary" id="SalvarFechamento">Ok</button>
